Update Projects for Generative Art

--- a/projects/index.html
+++ b/projects/index.html
@@ -152,9 +152,10 @@
     <h1 id="personal-projects">Personal Projects</h1>
 <ul>
 <li><a href="https://github.com/ericlovesmath/secretory-cleft-ibamr">T-Cell Secretory Cleft Simulations</a></li>
-<li><a href="https://ericlovesmath.github.io/pathfinding-visualizer/">Pathfinding Visualizer</a></li>
-<li><a href="https://ericlovesmath.github.io/wordle-clone/">Wordle Clone</a></li>
+<li><a href="https://ericchanlee.com/pathfinding-visualizer/">Pathfinding Visualizer</a></li>
+<li><a href="https://ericchanlee.com/wordle-clone/">Wordle Clone</a></li>
 <li><a href="https://github.com/ericlovesmath/dotfiles">Neovim Config</a></li>
+<li><a href="http://ericchanlee.com/generative-art/">Generative Art</a></li>
 </ul>
 
 </article>
