--- a/contact/index.html
+++ b/contact/index.html
@@ -154,7 +154,7 @@
 <li>Location: Newport Beach, California</li>
 <li>Github: <a href="https://github.com/ericlovesmath">@ericlovesmath</a></li>
 <li>Instagram: <a href="https://instagram.com/ericlovesmath/">@ericlovesmath</a></li>
-<li>Email: <a href="mailto:ericlovesmath@gmail.com">ericlovesmath@gmail.com</a></li>
+<li>Email: <a href="mailto:me@ericchanlee.com">me@ericchanlee.com</a></li>
 <li>LinkedIn: <a href="https://www.linkedin.com/in/eric-lee-bba075171/">Eric Lee</a></li>
 </ul>
 
