--- a/projects/index.html
+++ b/projects/index.html
@@ -157,6 +157,9 @@
     
     <h1 id="personal-projects">Personal Projects</h1>
 <ul>
+<li><a href="https://beave.red">Course Scheduler beave.red</a></li>
+<li><a href="https://github.com/northeastern-projects/LAHacks-2021">Cluster AI</a></li>
+<li><a href="https://github.com/caltechaiaa/LATTICE-Code">LATTICE - Nasa Big Idea Challenge</a></li>
 <li><a href="https://github.com/ericlovesmath/secretory-cleft-ibamr">T-Cell Secretory Cleft Simulations</a></li>
 <li><a href="https://ericchanlee.com/pathfinding-visualizer/">Pathfinding Visualizer</a></li>
 <li><a href="https://ericchanlee.com/wordle-clone/">Wordle Clone</a></li>
